--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /* Whole page styling */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,800&display=swap');
+
 :root {
     --nav-color: #9BA2FF;
 }
@@ -11,6 +13,7 @@ body {
     margin: 0;
     height: 200vh;
     background-color: #80DED9;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Header Styling Starts Here*/
@@ -24,6 +27,8 @@ header {
 
 header h1 {
     color: white;
+    text-transform: uppercase;
+    font-weight: 800;
 }
 
 .nav-toggle {
@@ -33,8 +38,8 @@ header h1 {
 .nav-toggle-label {
     position: absolute;
     top: 0;
-    left: 0;
-    margin-left: 1em;
+    right: 0;
+    margin-right: 1em;
     height: 100%;
     display: flex;
     align-items: center;
@@ -71,7 +76,7 @@ nav {
     background-color: var(--nav-color);
     width: 100%;
     position: absolute;
-    text-align: left;
+    text-align: right;
     top: 100%;
     left: 0;
     transform: scale(1,0);
@@ -86,7 +91,7 @@ nav ul {
 }
 
 nav li {
-    margin-left: 1em;
+    margin-right: 1em;
     margin-bottom: 1em;
 }
 
