--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ header {
 
 header h1 {
     color: white;
-    text-transform: uppercase;
     font-weight: 800;
 }
 
@@ -110,4 +109,55 @@ nav a {
 .nav-toggle:checked ~ nav a {
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
+}
+
+/* Header Styling ends here*/
+
+/* Media Queries start Here*/
+
+@media (min-width: 800px) {
+    .nav-toggle-label {
+        display: none;
+    }
+
+    header {
+        display: grid;
+        grid-template-columns: 1fr auto minmax(550px, 3fr) 1fr;
+    }
+    header h1 {
+        grid-column: 2 / 3;
+    }
+    nav {
+        all: unset;
+        grid-column: 3 / 4;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    nav ul {
+        display: flex;
+        justify-content: flex-end;
+    }
+    nav li {
+        margin-left: 3em;
+        margin-bottom: 0;
+    }
+    nav a {
+        opacity: 1;
+    }
+
+    nav a::before {
+        content: '';
+        display: block;
+        position: relative;
+        bottom: 0.5em;
+        background-color: white;
+        height: 5px;
+        opacity: 0;
+        transition: opacity 250ms ease-in-out;
+    }
+
+    nav a:hover::before {
+        opacity: 1;
+    }
 }
