Added Hero and featured products section
Added the Hero of the page, also included the featured section with images, functioning in both large and small screen sizes.

--- a/style.css
+++ b/style.css
@@ -2,18 +2,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,800&display=swap');
 
 :root {
-    --nav-color: #9BA2FF;
+    --nav-color: #dc5301;
 }
 
 *, *::before, *::after {
     box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+p{
+    margin: 0;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+}
+
 body {
     margin: 0;
     height: 200vh;
-    background-color: #80DED9;
+    background-color: #aaa;
     font-family: 'Open Sans', sans-serif;
+    line-height: 1.3;
+}
+
+.btn {
+    display: inline-block;
+    text-decoration: none;
+    padding: .5em 1.25em;
+    background-color: var(--nav-color, orange);
+    color: white;
+    text-transform: uppercase;
+    border-radius: .25em;
+}
+
+.btn:hover,
+.btn:focus {
+    transform: scale(1.1);
+    opacity: 0.9;
+}
+
+.subheader {
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.container {
+    width: 85%;
+    max-width: 65em;
+    margin: 0 auto;
 }
 
 /* Header Styling Starts Here*/
@@ -23,6 +67,9 @@ header {
     position: fixed;
     width: 100%;
     text-align: center;
+    top: 0;
+    left: 0;
+    z-index: 999;
 }
 
 .logo-img {
@@ -130,10 +177,10 @@ nav a {
 
 /* First Section Styling */
 
-main {
+/* main {
     position: relative;
     top: 100px;
-}
+} */
 
 footer {
     background-color: white;
@@ -192,4 +239,83 @@ footer {
     nav a:hover::before {
         opacity: 1;
     }
+}
+
+/* Hero Styling Starts Here */
+
+.hero {
+    text-align: center;
+    padding: 7em 1em;
+    color: white;
+    background-color: #222;
+    background-blend-mode: multiply;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center top;
+    
+}
+
+.spacing>*+* {
+    margin-top: 2em;
+}
+
+.hero-title {
+    text-transform: uppercase;
+    font-size: 2rem;
+    line-height: 1;
+}
+
+
+
+.row {
+    position: relative;
+    top: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    justify-content: space-around;
+}
+
+.featured {
+    padding: 6em 0;
+    background-color: #ddd;
+}
+
+.featured-item {
+    position: relative;
+    flex-basis: 30%;
+    min-width: 10rem;
+    transform: scale(0.85);
+    transition: transform 250ms ease-in-out;
+    text-align: center;
+}
+
+.featured-item span {
+    line-height: 3em;
+    font-weight: 800;
+    font-size: 1.5em;
+    opacity: 0;
+    transition: opacity 250ms ease-in-out;
+}
+
+.featured-item:hover,
+.featured-item:focus {
+    transform: scale(1);
+}
+
+.featured-item:hover span,
+.featured-item:focus span {
+    opacity: 1;
+}
+
+.featured-item::after {
+    content: '';
+    display: block;
+    position: absolute;
+    padding: 70% 90% 0 0;
+    border-radius: 25%;
+    top: -10%;
+    left: 10%;
+    z-index: -1;
+    background-color:#3f61d1;
 }
