--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ img {
 }
 
 body {
+    position: relative;
     margin: 0;
-    height: 200vh;
     background-color: #aaa;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.3;
@@ -56,8 +56,14 @@ body {
 
 .container {
     width: 85%;
-    max-width: 65em;
     margin: 0 auto;
+    text-align: center;
+    padding: 6em 0;
+}
+
+.form-item {
+    display: block;
+    margin-top: 1em;
 }
 
 /* Header Styling Starts Here*/
@@ -177,15 +183,14 @@ nav a {
 
 /* First Section Styling */
 
-/* main {
-    position: relative;
-    top: 100px;
-} */
 
-footer {
+.footer {
     background-color: white;
-    position: relative;
-    top: 200px;
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    padding: 2em;
 }
 
 /* Media Queries start Here*/
@@ -277,7 +282,6 @@ footer {
 }
 
 .featured {
-    padding: 6em 0;
     background-color: #ddd;
 }
 
@@ -318,4 +322,12 @@ footer {
     left: 10%;
     z-index: -1;
     background-color:#3f61d1;
+}
+.contact {
+    padding-bottom: 8em;
+}
+
+.form-email {
+    background-color: white;
+    padding: 2em 0;
 }
